content/v1.5/Developer Reference/link-token-contracts.md
---
title: "LINK Token Contracts"
slug: "link-token-contracts"
hidden: false
metadata: 
  title: "LINK Token Contracts"
  description: "Addresses for the LINK token on supported networks."
  image: 
    0: "https://files.readme.io/72d4bd9-link.png"
    1: "link.png"
    2: 1459
    3: 1459
    4: "#dbe1f8"
createdAt: "2020-04-24T10:11:53.866Z"
updatedAt: "2020-11-05T10:01:54.217Z"
---
LINK tokens are used to pay node operators for retrieving data for smart contracts and also for deposits placed by node operators as required by contract creators.

The LINK token is an ERC677 token that inherits functionality from the ERC20 token standard and allows token transfers to contain a data payload. Read more about the <a href="https://github.com/ethereum/EIPs/issues/677" target="_blank" rel="noreferrer, noopener">ERC677 transferAndCall token standard</a>.

# Ethereum

## Mainnet

|Parameter|Value|
|:---|:---|
|Address|<a href="https://etherscan.io/token/0x514910771af9ca656af840dff83e8264ecf986ca" target="_blank" rel="noreferrer, noopener">`0x514910771af9ca656af840dff83e8264ecf986ca`</a>|
|Name|ChainLink Token|
|Symbol|LINK|
|Decimals|18|

## Kovan

> 🚰Kovan Faucets
>
> Testnet LINK is available from https://kovan.chain.link/
> Testnet ETH is available from https://faucet.kovan.network/

|Parameter|Value|
|:---|:---|
|Address|<a href="https://kovan.etherscan.io/token/0xa36085F69e2889c224210F603D836748e7dC0088" target="_blank" rel="noreferrer, noopener">`0xa36085F69e2889c224210F603D836748e7dC0088`</a>|
|Name|ChainLink Token|
|Symbol|LINK|
|Decimals|18|

## Rinkeby

> 🚰Rinkeby Faucets
>
> Testnet LINK is available from https://rinkeby.chain.link/
> Testnet ETH is available from https://faucet.rinkeby.io/

|Parameter|Value|
|:---|:---|
|Address|<a href="https://rinkeby.etherscan.io/token/0x01BE23585060835E02B77ef475b0Cc51aA1e0709" target="_blank" rel="noreferrer, noopener">`0x01BE23585060835E02B77ef475b0Cc51aA1e0709`</a>|
|Name|ChainLink Token|
|Symbol|LINK|
|Decimals|18|

## Goerli

|Parameter|Value|
|:---|:---|
|Address|<a href="https://goerli.etherscan.io/address/0x326c977e6efc84e512bb9c30f76e30c160ed06fb" target="_blank" rel="noreferrer, noopener">`0x326c977e6efc84e512bb9c30f76e30c160ed06fb`</a>|
|Name|ChainLink Token|
|Symbol|LINK|
|Decimals|18|

# Binance Smart Chain

## Mainnet

|Parameter|Value|
|:---|:---|
|Address|<a href="https://bscscan.com/token/0x404460c6a5ede2d891e8297795264fde62adbb75" target="_blank" rel="noreferrer, noopener">`0x404460c6a5ede2d891e8297795264fde62adbb75`</a>|
|Name|ChainLink Token|
|Symbol|LINK|
|Decimals|18|

# Matic

## Mainnet

|Parameter|Value|
|:---|:---|
|Address|<a href="https://explorer.matic.network/address/0xb0897686c545045afc77cf20ec7a532e3120e0f1" target="_blank" rel="noreferrer, noopener">`0xb0897686c545045afc77cf20ec7a532e3120e0f1`</a>|
|Name|ChainLink Token|
|Symbol|LINK|
|Decimals|18|

# RSK

## Mainnet

> 🌉Token Bridge
>
> Supported token bridge at https://tokenbridge.rsk.co/

|Parameter|Value|
|:---|:---|
|Address|<a href="https://explorer.rsk.co/address/0x14adae34bef7ca957ce2dde5add97ea050123827" target="_blank" rel="noreferrer, noopener">`0x14adae34bef7ca957ce2dde5add97ea050123827`</a>|
|Name|rLINK|
|Symbol|rLINK|
|Decimals|18|